--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/better-sqlite3": "^7.6.12",
+    "@types/lodash": "^4.17.16",
     "better-auth": "^1.2.5",
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
