--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: "3"
 services:
-  my-app:
-    build:
-      context: .
-    ports:
-      - "3000:3000"
+  # doitwrite:
+  #   build:
+  #     context: .
+  db:
+    image: postgres
+    restart: always
+    network_mode: "host"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: doitwrite
