--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
@@ -42,6 +43,7 @@
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@tanstack/react-query-devtools": "^5.69.0",
     "@types/node": "^20",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
