--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "better-sqlite3": "^11.9.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
