--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,28 +3,35 @@ name: Docker Image CI
 on:
   push:
     branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: jphsw/doitwrite
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          push: true
           build-args: |
-            NPM_TOKEN=${{ secrets.NPM_TOKEN }}  # Pass the GitHub Secret
-
-          # Other .npmrc values:  Uncomment if needed.  Define the secrets first.
-          # NPM_REGISTRY=${{ secrets.NPM_REGISTRY }}
-          # NPM_EMAIL=${{ secrets.NPM_EMAIL }}
+            NPM_TOKEN=${{ secrets.NPM_TOKEN }}
