--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start",
+    "dev": "vite dev --port 3000",
+    "build": "vite build",
+    "start": "node .output/server/index.mjs",
     "lint": "eslint .",
     "format": "prettier --write .",
     "db": "drizzle-kit",
@@ -31,7 +31,7 @@
     "@tanstack/react-router": "^1.120.2",
     "@tanstack/react-router-devtools": "^1.120.2",
     "@tanstack/react-router-with-query": "^1.120.2",
-    "@tanstack/react-start": "^1.120.2",
+    "@tanstack/react-start": "^1.121.4",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
@@ -48,7 +48,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
-    "vinxi": "0.5.3"
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.49.0",
